<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_register"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/buttonFb_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/icon_fb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonApple_register"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonApple_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/icon_apple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonGG_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/icon_gg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFb_register"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/txtRegisterTitle"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewAccount_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/Black"
        android:hint="@string/txtAccount"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etPass_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Black"
        android:ems="10"
        android:hint="@string/txtPass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail_register" />

    <EditText
        android:id="@+id/etPassAgain_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Black"
        android:ems="10"
        android:hint="@string/txtCfPass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass_register" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/txtRegisterTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassAgain_register" />

    <TextView
        android:id="@+id/textViewSwichLogin"
        android:layout_width="119dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:textColor="@color/White"
        android:textSize="15dp"
        android:text="@string/txtLoginMember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <EditText
        android:id="@+id/etEmail_register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccount_register" />

    <Button
        android:id="@+id/buttonChangeAvatar"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/txtbtnChangeAvatar"
        app:layout_constraintBottom_toTopOf="@+id/textViewAccount_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewAvatar2"
        android:layout_width="132dp"
        android:layout_height="119dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />


</androidx.constraintlayout.widget.ConstraintLayout>