<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="79dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="296dp"
        android:text="@string/txtLogin"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail_register"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/Black"
        android:ems="10"

        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etPassword_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/Black"
        android:ems="10"
        android:hint="@string/txtPass"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/White"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail_register" />

    <TextView
        android:id="@+id/etForGotPass"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtForgot"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_login" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="100dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="@drawable/custom_button"
        android:text="@string/txtLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_login" />

    <TextView
        android:id="@+id/textViewSwichRegister"
        android:layout_width="113dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/txtRegister"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonGG_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/icon_gg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etForGotPass" />

    <Button
        android:id="@+id/buttonFB_login"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/icon_fb"
        app:layout_constraintStart_toEndOf="@+id/buttonGG_register"
        app:layout_constraintTop_toBottomOf="@+id/etForGotPass" />

    <Button
        android:id="@+id/buttonApple_register"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/icon_apple"
        app:layout_constraintStart_toEndOf="@+id/buttonFB_login"
        app:layout_constraintTop_toBottomOf="@+id/etForGotPass" />

    <CheckBox
        android:id="@+id/checkBoxRemeberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtMemmory"
        android:textColor="#FFFFFF"
        android:buttonTint="@color/White"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textIsSelectable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword_login" />

</androidx.constraintlayout.widget.ConstraintLayout>