<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4466BC"
    tools:context=".fragment.AccountFragment">
    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textViewAccount_register"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewAccount"
        android:layout_width="128dp"
        android:layout_height="124dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_linear"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtLogOut"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactHelp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:background="@drawable/custom_linear"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textViewAccount_register">

        <TextView
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/txtAccount"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtAccountLoad"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="aa"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_linear"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/txtEmail"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtEmailLoad"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="aa"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewChangePass"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_linear"
        android:gravity="center"
        android:text="@string/txtChangePass"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textViewContactHelp"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_linear"
        android:gravity="center"
        android:text="@string/txtContact"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangePass" />

    <Switch
        android:id="@+id/switchChangeNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtSwitch"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChangePass" />

</androidx.constraintlayout.widget.ConstraintLayout>